--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,22 @@
 body {
   margin: 0; }
 
-header nav .main-logo {
-  width: 100px; }
+header {
+  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../public/img/hero.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative; }
+  header nav .nav-link {
+    color: white !important; }
+  header .main-logo {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 200px; }
+  header #img-main {
+    border-radius: 10px; }
