--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,125 @@ body {
 }
 
 header{
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../public/img/hero.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
     nav {
-        .main-logo {
-            width: 100px;
+        .nav-link {
+            color: white !important;
+        }
+    }
+    .main-logo {
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 200px;
+    }
+}
+
+// Estilos para nav hover
+.link-cont {
+    position: relative;
+    font-size: 24px;
+}
+
+.link {
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    padding: 10px 0;
+    color: #fff;
+}
+
+.link-wrapper {
+    position: relative;
+    display: block;
+    padding: 20px 0;
+}
+
+.inner-wrapper {
+    position: relative;
+    display: inline-block;
+}
+
+.wrapper-16 {
+    &:before {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 3px;
+        height: 100%;
+        background-color: @yellow;
+        transform: scaleY(0);
+        transform-origin: bottom left;
+
+        transition: transform 0.3s;
+    }
+
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 3px;
+        height: 100%;
+        background-color: @yellow;
+        transform: scaleY(0);
+        transform-origin: top right;
+
+        transition: transform 0.3s;
+    }
+
+    .hover-16 {
+        padding: 10px;
+        
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 3px;
+            background-color: @yellow;
+            transform: scaleX(0);
+            transform-origin: top left;
+
+            transition: transform 0.3s;
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 3px;
+            background-color: @yellow;
+            transform: scaleX(0);
+            transform-origin: bottom right;
+
+            transition: transform 0.3s;
+        }
+    }
+
+    &:hover {
+        &:before, 
+        &:after {
+            transform: scaleY(1);
+        }
+
+        .hover-16 {
+            &:before,
+            &:after {
+                transform: scaleX(1);
+            }
         }
     }
 }
