--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,11 @@
 body {
     margin: 0;
+    font-family: 'Quicksand', sans-serif;
 }
 
 header{
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../public/img/hero.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../public/img/hero.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -25,103 +26,30 @@ header{
     }
 }
 
-// Estilos para nav hover
-.link-cont {
-    position: relative;
-    font-size: 24px;
-}
-
-.link {
-    display: inline-block;
-    position: relative;
-    text-decoration: none;
-    padding: 10px 0;
-    color: #fff;
-}
-
-.link-wrapper {
-    position: relative;
-    display: block;
-    padding: 20px 0;
-}
-
-.inner-wrapper {
-    position: relative;
-    display: inline-block;
-}
-
-.wrapper-16 {
-    &:before {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 3px;
-        height: 100%;
-        background-color: @yellow;
-        transform: scaleY(0);
-        transform-origin: bottom left;
-
-        transition: transform 0.3s;
-    }
-
-    &:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 3px;
-        height: 100%;
-        background-color: @yellow;
-        transform: scaleY(0);
-        transform-origin: top right;
-
-        transition: transform 0.3s;
-    }
-
-    .hover-16 {
-        padding: 10px;
-        
-        &:before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 3px;
-            background-color: @yellow;
-            transform: scaleX(0);
-            transform-origin: top left;
-
-            transition: transform 0.3s;
-        }
-
-        &:after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            width: 100%;
-            height: 3px;
-            background-color: @yellow;
-            transform: scaleX(0);
-            transform-origin: bottom right;
-
-            transition: transform 0.3s;
+.main-section {
+    margin: 50px;
+    #main-datos {
+        font-weight: 400;
+        h2 {
+            font-size: 1.2em;
         }
     }
+    .rrss {
+        width: 32px;
+        margin: 5px 10px;
+    }
+}
 
-    &:hover {
-        &:before, 
-        &:after {
-            transform: scaleY(1);
-        }
-
-        .hover-16 {
-            &:before,
-            &:after {
-                transform: scaleX(1);
-            }
-        }
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:30%;
+    position:relative;
+    height:0;
+    iframe {
+        left:0;
+        top:0;
+        height:100%;
+        width:100%;
+        position:absolute;
     }
 }
